ui fix: navbar a overflow fixed

--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -88,6 +88,12 @@ TODOs
   }
 }
 
+@media (max-width: 1100px) {
+  .long{
+    display: none !important;
+  }
+}
+
 // > media query for mobile
 @media (max-width: map-get($map: vr.$breakpoints, $key: tablet)) {
   #navbar {
